Styled bg on leaderboard, spacing fixes

--- a/code/UI/Menu/GameMenu.scss
+++ b/code/UI/Menu/GameMenu.scss
@@ -97,7 +97,6 @@ GameMenu {
     flex-grow: 1;
     width: 100%;
     height: 100%;
-    padding: 64px;
     z-index: 4;
   }
 
