--- a/code/UI/Menu/Stats/StatsMapInfo.scss
+++ b/code/UI/Menu/Stats/StatsMapInfo.scss
@@ -1,4 +1,7 @@
 .map-details {
   flex-direction: column;
   width: 500px;
+  margin-left: 64px;
+  margin-top: 64px;
+  margin-bottom: 64px;
 }
