--- a/code/UI/Menu/Stats/StatsTabLeaderboard.scss
+++ b/code/UI/Menu/Stats/StatsTabLeaderboard.scss
@@ -1,5 +1,9 @@
+@import "../../Vars.scss";
+
 .leaderboards {
+  background: linear-gradient(rgba($pink, 0), rgba($pink, 0.02));
   flex-grow: 1;
   margin: 0 32px;
   flex-direction: column;
+  padding: 64px 32px 64px 32px;
 }
